[gd_scene load_steps=3 format=3 uid="uid://bplfvre0qtldv"]

[ext_resource type="Script" uid="uid://b4f543t68clh8" path="res://scripts/pause_menu.gd" id="1_yvnxv"]
[ext_resource type="Script" uid="uid://di7656w2yb0r0" path="res://addons/AdmobPlugin/Admob.gd" id="2_myx47"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_yvnxv")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.478431)

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -170.0
offset_right = 216.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
color = Color(0.00895073, 0.120105, 0.0916936, 0.478431)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Resume
"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Main Menu"

[node name="Admob" type="Node" parent="."]
script = ExtResource("2_myx47")
is_real = true
real_application_id = "ca-app-pub-6319704391115198~4533431907"
real_interstitial_id = "ca-app-pub-6319704391115198/4664218440"
metadata/_custom_type_script = "uid://di7656w2yb0r0"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="initialization_completed" from="Admob" to="." method="_on_admob_initialization_completed"]
[connection signal="interstitial_ad_loaded" from="Admob" to="." method="_on_admob_interstitial_ad_loaded"]
